Lab2-Airbnb/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airbnb-lab2
  labels:
    name: airbnb-lab2
    environment: development
