Lab2-Airbnb/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab2-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab2-backend
  template:
    metadata:
      labels:
        app: lab2-backend
    spec:
      containers:
        - name: lab2-backend
          image: airbnb-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
