Lab2-Airbnb/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab2-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab2-frontend
  template:
    metadata:
      labels:
        app: lab2-frontend
    spec:
      containers:
        - name: lab2-frontend
          image: airbnb-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
