Lab2-Airbnb/k8s/ai-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-service-service
spec:
  type: ClusterIP
  selector:
    app: ai-service
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
