Lab2-Airbnb/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab2-backend-service
spec:
  type: NodePort
  selector:
    app: lab2-backend
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
      nodePort: 30080
